--- a/index.css
+++ b/index.css
@@ -11,14 +11,74 @@ body {
 
 .container {
   position: relative;
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  max-width: 800px;
+  height: 453px;
+  max-height: fit-content;
   overflow: hidden;
+  background: black;
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+}
+.wave {
+  width: 5px;
+  height: 100px;
+  background: linear-gradient(45deg, cyan, #fff);
+  margin: 10px;
+  animation: wave 1s linear infinite;
+  border-radius: 20px;
+}
+.wave:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.wave:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.wave:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.wave:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.wave:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.wave:nth-child(8) {
+  animation-delay: 0.7s;
+}
+.wave:nth-child(9) {
+  animation-delay: 0.8s;
+}
+.wave:nth-child(10) {
+  animation-delay: 0.9s;
+}
+
+@keyframes wave {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
 
 #video {
   width: 100%;
-  max-width: 800px;
+  height: 100%;
+  display: none;
 }
 
 #controls {
@@ -32,10 +92,7 @@ body {
   /* transform: translateY(120%); */
   transition: 0.3s;
   color: white;
-}
-
-.hidden {
-  display: none;
+  opacity: 0;
 }
 
 .buttons {
@@ -149,4 +206,8 @@ input[type='range']:focus {
 .shortcut h5 {
   margin: 10px;
   font-size: 16px;
+}
+
+i {
+  cursor: pointer;
 }
